--- a/activity/templates/activity/no_source.html
+++ b/activity/templates/activity/no_source.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1>{% trans 'Keine Quelle gefunden' %}</h1>
 <div>
-    {% trans 'Das Bild hab ich wohl irgendwo aus dem Internet gezogen. Falls Sie Anspruch auf der Urheberrecht beziehen wollen, schicken Sie mir eine Nachricht: ' %}
+    {% trans 'Das Bild hab ich wohl irgendwo aus dem Internet gezogen. Falls Sie Anspruch auf das Urheberrecht erheben wollen, schicken Sie mir eine Nachricht: ' %}
     <a href="{% url 'account:detail' 'admin' %}">admin</a>
 </div>
 {% endblock %}
