--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -529,3 +529,20 @@ select:focus, select:hover {
     font-size: 10px;
     font-style: italic;
 }
+
+.search-bar {
+    position: relative;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-input {
+    background-color: white;
+    color: black;
+    font-size: 16px;
+    float: left;
+    margin-left: 10px;
+}
