--- a/character/templates/css/quiz.css
+++ b/character/templates/css/quiz.css
@@ -76,3 +76,9 @@
       display: flex;
       flex-direction: column;
   }
+  
+  .button-container {
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+  }
