--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -178,6 +178,7 @@ select:focus, select:hover {
     border-radius: 10%;
     display: block;
     margin: 0 auto;
+    max-height: 250px;
 }
 
 .activity-horizontal-list {
