--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -2,12 +2,13 @@
 {% load i18n %}
 {% load activity_filter %}
 {% load static %}
+{% load thumbnail %}
 
 {% block title %}{{ activity.name }}{% endblock %}
 
 {% block content %}
     {% if activity.image %}
-        <img src="{{ activity.image.url }}" width="200px" class="activity-full-image">
+        <img src="{% thumbnail activity.image 400x400 %}" class="activity-full-image">
         <div class="center-container img-description">
             <a href="{% if activity.image_source %}{{ activity.image_source }}{% else %}{% url 'activity:no_source' %}{% endif %}">
                 [{% trans 'Quelle' %}]
