--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -179,6 +179,7 @@ select:focus, select:hover {
     display: block;
     margin: 0 auto;
     max-height: 250px;
+    max-width: 80%;
 }
 
 .activity-horizontal-list {
