--- a/activity/templates/activity/activity_list.html
+++ b/activity/templates/activity/activity_list.html
@@ -8,7 +8,7 @@
     <h1>{% trans "Alle Aktivitäten" %}</h1>
     <div class="search-bar">
         {% trans 'Suche: ' %}
-        <input type="search" id="search-input" class="search-input" name="activity-search">
+        <input type="search" id="search-input" class="search-input" name="activity-search" value="{{ search_string|default_if_none:'' }}">
         <img src="{% static '/icons/search.png' %}" onclick=search() height="25px" style="margin-left: 5px; cursor: pointer">
     </div>
     <p>
