--- a/character/templates/character/quiz.html
+++ b/character/templates/character/quiz.html
@@ -27,6 +27,9 @@
         <div class="counter" id="counter">
             
         </div>
+        <div class="time" id="time">
+            
+        </div>
     </div>
     
 </div>
