--- a/character/templates/css/quiz.css
+++ b/character/templates/css/quiz.css
@@ -1,84 +1,148 @@
 .question {
-    background-color: #1a1a1a;
-    text-align: center;
-    padding: 5px 5px;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 5px;
+background-color: #1a1a1a;
+text-align: center;
+padding: 5px 5px;
+font-weight: bold;
+font-size: 20px;
+border-radius: 5px;
 }
 
 .info {
-    font-weight: bold;
+font-weight: bold;
 }
 
 .info.left {
-    float: left;
-    color: darkgreen;
+float: left;
+color: darkgreen;
 }
 
 .info.right {
-    float: right;
-    color: red;
+float: right;
+color: red;
 }
 
 .slider {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 25px;
-    appearance: none;
-    
+width: 100%;
+margin-top: 10px;
+margin-bottom: 10px;
+height: 25px;
+appearance: none;
+
 }
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
 .slider::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
-    appearance: none;
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */
-    background: white; /* Green background */
-    cursor: pointer; /* Cursor on hover */
-  }
-  
-  .slider::-moz-range-thumb {
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */
-    background: white; /* Green background */
-    cursor: pointer; /* Cursor on hover */
-  }
-  
-  h2 {
-      text-align: center; 
-      margin-bottom: 5px;
-  }
-  
-  .three {
-    float: left; 
-    width: 30%; 
+-webkit-appearance: none; /* Override default look */
+appearance: none;
+width: 25px; /* Set a specific slider handle width */
+height: 25px; /* Slider handle height */
+background: white; /* Green background */
+cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+width: 25px; /* Set a specific slider handle width */
+height: 25px; /* Slider handle height */
+background: white; /* Green background */
+cursor: pointer; /* Cursor on hover */
+}
+
+h2, h3 {
+    text-align: center; 
+    margin-bottom: 5px;
+}
+
+.three {
+float: left; 
+width: 30%; 
+text-align: center;
+word-wrap: break-word;
+padding-right: 5px;
+margin-bottom: 20px;
+}
+
+.character-overview {
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+.counter {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.time {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.test-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.trait-left {
+    width: 50%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.trait-right {
+    width: 50%;
+    float: right;
+    display: flex;
+    flex-direction: column;
+}
+
+.applet {
+    display: flex;
+    flex-direction: row;
+    margin-right: 10px;
+    align-items: center;
+    background-color: black;
+    border-radius: 5px;
+    user-select: none;
+}
+
+.applet img {
+    float: left;
+    height: 30px;
+    cursor: pointer;
+    background-color: black;
+}
+
+.positive {
+    width: 33%;
     text-align: center;
-    word-wrap: break-word;
-    padding-right: 5px;
-    margin-bottom: 20px;
-  }
-  
-  .character-overview {
-      margin-top: 15px;
-      font-weight: bold;
-  }
-  
-  .counter {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-  }
-  
-  .test-container {
-      display: flex;
-      flex-direction: column;
-  }
-  
-  .button-container {
-      display: flex;
-      justify-content: center;
-      flex-direction: row;
-  }
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    background-color: #0087f7;
+    border-radius: 5px;
+    border: 1px solid transparent
+}
+
+.weight {
+    width: 33%;
+    cursor: pointer;
+    text-align: center;
+    cursor: pointer;
+    background-color: #0087f7;
+    border-radius: 5px;
+    border: 1px solid transparent;
+}
+
+.weight:hover, .positive:hover {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    border: 1px solid rgba(81, 203, 238, 1);
+}
