--- a/character/templates/character/overview.html
+++ b/character/templates/character/overview.html
@@ -21,7 +21,7 @@
     </div>
 {% else %}
     <div class="center-container">
-        <b>{% trans 'Die hier angebotenen Persönlichkeitstests basieren auf <a href="https://ipip.ori.org/newNEOKey.htm" target="_blank">frei verfügbaren Fragen</a>, die auf den <a href="https://de.wikipedia.org/wiki/Big_Five_(Psychologie)" target="_blank">Big Five</a> der Persönlichkeitspsychologie fußen.<br><br>Der offizielle NEO-PI-R Persönlichkeitstest umfasst 240 Fragen. Weniger Fragen sind zwar schneller zu beantworten, liefern aber ein unter Wiederholung instabileres Testergebnis.' %}</b>
+        <b>{% trans 'Die hier angebotenen Persönlichkeitstests wurden in Anlehnung an den NEO-PI-R Test erstellt und basieren auf <a href="https://ipip.ori.org/newNEOKey.htm" target="_blank">frei verfügbaren Fragen</a>, die auf den <a href="https://de.wikipedia.org/wiki/Big_Five_(Psychologie)" target="_blank">Big Five</a> der Persönlichkeitspsychologie fußen.<br><br>Der offizielle NEO-PI-R Persönlichkeitstest umfasst 240 Fragen. Weniger Fragen sind zwar schneller zu beantworten, liefern aber ein unter Wiederholung instabileres Testergebnis.' %}</b>
     </div>
     <p></p>
     <div class="button-like" onclick=openLink("{% url 'character:quiz' 60 %}")>
@@ -97,6 +97,10 @@
 <div class="button-like" id="reset" onclick=reset()>
     <img src="{% static 'icons/attention.png' %}">
     <span id="reset-text">{% trans 'Zurücksetzen' %}</span>
+</div>
+<br>
+<div class="center-container" style="color: yellow">
+    <b>{% trans 'Antworten auf individuelle Fragen werden <u>nicht gespeichert</u>. Nur die Punktsumme in den Kategorien wird zum Berechnen von Empfehlungen verwendet und für sonst nichts.' %}</b>
 </div>
 {% endblock %}
 
