--- a/character/templates/css/quiz.css
+++ b/character/templates/css/quiz.css
@@ -7,6 +7,10 @@ font-size: 20px;
 border-radius: 5px;
 }
 
+#current-question {
+    width: 100%;
+}
+
 .info {
 font-weight: bold;
 }
@@ -14,11 +18,15 @@ font-weight: bold;
 .info.left {
 float: left;
 color: darkgreen;
+width: 45%;
+text-align: left;
 }
 
 .info.right {
 float: right;
 color: red;
+width: 45%;
+text-align: right;
 }
 
 .slider {
