--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,7 +15,7 @@
         {% block style %}{% endblock %}
         {% include 'style/queries.css' %}
     </style>
-    <link rel="shortcut icon" type="image/png" href="{% static 'icons/users-and-groups-group@32px.png' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'icons/activity.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
