--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -19,7 +19,7 @@
             </p>
         {% else %}
         <p><strong>{% trans "Willkommen bei myactivities.net! :)" %}</strong></p>
-        <div class="button-like" onclick=openLink("{% url 'account:about' %}")><img src="{% static 'icons/question.png' %}">{% trans "Was ist das hier?" %}</div>
+        <!--<div class="button-like" onclick=openLink("{% url 'account:about' %}")><img src="{% static 'icons/question.png' %}">{% trans "Was ist das hier?" %}</div>-->
             <p>{% trans "Bitte nutzen Sie das folgende Formular zum einloggen:" %}</p>
             <form method="post" action="{% url 'account:login' %}" class="login-form">
                 {{ form.as_p }}
