--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -194,7 +194,7 @@ select:focus, select:hover {
     display: inline-block;
 }
 
-.activity-horizontal-list .item:hover {
+.activity-horizontal-list .item:hover, .activity-horizontal-list .item.selected {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
     border: 1px solid rgba(81, 203, 238, 1);
 }
