--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -56,6 +56,18 @@ input, textarea, select {
     display: block;
 }
 
+.post .likes {
+    font-weight: bold; 
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+}
+
+.post .likes img {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 h1 {
     font-style: italic;
 }
