--- a/character/templates/character/overview.html
+++ b/character/templates/character/overview.html
@@ -76,6 +76,7 @@
     {% endfor %}
     </div>
 <h2>{% trans 'Charakter' %}</h2>
+<p class="center-container"><b>{% trans 'Werte verglichen mit den Durchschnittswerten. <br>+50%: Maximal überdurchschnittlich, -50%: Maximal unterdurchschnittlich' %}</b></p>
 <div class="test-container">
     <h2 id="nh">{% trans 'Neurotizismus' %}: </h2>
 
